--- a/core/templates/frontend.hbs
+++ b/core/templates/frontend.hbs
@@ -13,4 +13,6 @@
   <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
 </head>
 <body>{{{ body }}}</body>
+
+<script type="text/javascript" src="/public/main.js"></script>
 </html>
