Congruent client and server side rendering

--- a/core/templates/frontend.hbs
+++ b/core/templates/frontend.hbs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/public/css/vendor/normalize.css" />
   <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
 </head>
-<body>{{{ body }}}</body>
+<body><div id="app">{{{ html }}}</div></body>
 
 <script type="text/javascript" src="/public/main.js"></script>
 </html>
