--- a/core/templates/frontend.hbs
+++ b/core/templates/frontend.hbs
@@ -2,17 +2,20 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if (gte IE 9)| IEMobile |!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
-  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  
-  <title></title>
-  
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1, minimal-ui" />
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <link rel="stylesheet" type="text/css" href="/public/css/vendor/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
+    <title></title>
+
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1, minimal-ui" />
+
+    <link rel='shortcut icon' href="/public/favicon.ico" type='image/x-icon'/>
+
+    <link rel="stylesheet" type="text/css" href="/public/css/vendor/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
 </head>
-<body><div id="app">{{{ html }}}</div></body>
-
-<script type="text/javascript" src="/public/main.js"></script>
+<body>
+    <div id="app">{{{ html }}}</div>
+    <script type="text/javascript" src="/public/main.js"></script>
+</body>
 </html>
